--- a/mental-reminder.html
+++ b/mental-reminder.html
@@ -91,7 +91,7 @@
                     <h3 class="mental-reminder-accent">Systematic Literature Review</h3>
                     <p><em>Our team reviewed 10 research papers on ICT-solutions on mental health as well as the ties between forgetfulness and mental-health. </em></p>
                     <p>The most important takeaways were - </p>
-                    <p>1. Based on research analyzing mental-health app reviews, users value user interface and the user friendliness of the app. They also appreciate customization and designing for trust. <a class="source" href="">(Source)</a></p>
+                    <p>1. Based on research analyzing mental-health app reviews, users value user interface and the user friendliness of the app. They also appreciate customization and designing for trust. <a class="source" href="https://journals.sagepub.com/doi/full/10.1177/1460458219896492">(Source)</a></p>
                     <p>2. Keep it simple - don't overload the user's cognitive load, especially when designing for those with mental-health concerns. <a class="source" href="https://humanfactors.jmir.org/2017/1/e1/" target="_blank">(Source)</a></p>
                 </div>
 
