--- a/index.html
+++ b/index.html
@@ -44,116 +44,36 @@
         </div>
     </div>
 
+    <div class="content-wrapper">
         <section class="landing">
             <div class="landing-content">
-                <h2>Heya ✌ I'm Daniel King - a UX designer based in Washington.</h2>
+                <h2>Heya ✌ I'm Daniel King - <br/>a UX designer based in Washington.</h2>
+                <hr>
 
-                <p>I'm a student in WWU's Computer Science program with a double minor in Math and UX Design. My multidisciplinary background gives me a unique perspective in collaborative design environments and how each task fits into the big picture.</p>
-
-                <p>I'm a big believer in empathy and its role in the design process. My personal UX approach is to use data-driven validation methods to iterate as often as possible in order to create an intuitive and delightful experience to all users.</p>
-
-                <div class="landing-line">
+                <div class="landing-3-col">
+                    <div class="hero-column">
+                        <h3>What I do</h3>
+                        <p>Use empathy, data, and my multidisciplinary background to craft delightful experiences</p>
+                    </div>
+                    <div class="hero-column">
+                        <h3>What I like</h3>
+                        <p>Architectural Digest, Jasmine Green Milk Tea, and collecting peculiar hobbies</p>
+                    </div>
+                    <div class="hero-column">
+                        <h3>What I want</h3>
+                        <p>To work with you on a meaningful project</p>
+                    </div>
                 </div>
-
-                <div class="landing-links">
-                    <a href="">be</a>
-                    <a href="">ln</a>
-                    <a href="mailto:chuan.e.king@gmail.com">email</a>
-                </div>
-
             </div>
-
-            <div class="landing-image">
-
-                <div class="image-wrapper">
-                </div>
-
-                <p class="caption">
-                    <em>
-                    fig. 01 - A young UX designer in his natural habitat. Whether he is thinking about Swiss typography or just his next shot of espresso, we'll never know. Maybe you should <a href="">ask him</a>.
-                    </em>
-                </p>
-            </div>
-
         </section>
 
+        <section class="signature"></section>
 
-        <div class="content-wrapper">
-            <section class="select-works">
+        <section class="work">
+            <h2>Here's what I've worked on in the past.</h2>
 
-                <h1>SELECT WORKS</h1>
-
-            </section>
-
-        </div>
-
-
-        <div class="project-grid">
-             <section class="project-row">
-                <a href="mental-reminder.html">
-                    <div class="project">
-                        <div class="img mental-reminder">
-
-                        </div>
-
-                        <div class="project-text-wrapper">
-                            <div class="project-text">
-                                <h4>MENTAL REMINDER</h4>
-                                <div class="project-line"></div>
-
-                                <p>A minimal, mental-health based reminder app with a focus on reducing cognitive load. </p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="wta.html">
-                    <div class="project">
-                        <div class ="img"></div>
-                        <div class="project-text-wrapper">
-                            <div class="project-text">
-                                <h4>WTA App Concept</h4>
-                                <div class="project-line"></div>
-                                <p>A first-party mobile app concept for finding route information and trip planning with strong WTA branding.</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </section>
-        </div>
-
-        <div class="project-grid">
-
-             <section class="project-row">
-                <a href="mental-reminder.html">
-                    <div class="project">
-                        <div class="img mental-reminder">
-
-                        </div>
-
-                        <div class="project-text-wrapper">
-                            <div class="project-text">
-                                <h4>WWU Move-In App</h4>
-                                <div class="project-line"></div>
-
-                                <p>Designed a progressive web app to guide over 400 <br> students through a socially distanced move-in process.</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-
-                <div class="project-afterwards">
-                    <div class="afterwards-text">
-                        <h3>Want more?</h3>
-                        <p>This was just a small sample of what I have to offer - if you want to view some of my branding/illustration/general design work, feel free to peruse the link below.</p>
-                        <p><a href="./menagerie.html">Visit the Menagerie</a></p>
-                    </div>
-
-                </div>
-            </section>
-        </div>
-
-        <section class="about"></section>
+        </section>
+    </div>
 
         <footer>
             <div class="ref-wrapper">
