hee haw im the worst

--- a/index.html
+++ b/index.html
@@ -67,36 +67,86 @@
             </div>
         </section>
 
-        <section class="signature"></section>
-
-        <section class="work">
-            <h2>Here's what I've worked on in the past.</h2>
-
+        <section class="signature">
+            <img src="./assets/name.png" alt="name in my handwriting" width="15%" height="auto"/>
         </section>
+
+        <h2>Here's what I've worked on in the past.</h2>
+
     </div>
 
+        <section class="work">
+
+            <a href="./airbnb.html" class="work-card-a">
+                <div class="work-card airbnb-eco">
+                    <div class="work-card-content">
+                        <h3>Airbnb Eco</h3>
+                        <p>Incentivizing and rewarding sustainable practices for Airbnb guests while empowering local communities.</p>
+                        <div class="work-card-tag-wrapper">
+                            <span class="tag">School Project</span>
+                            <span class="tag">UX Designer</span>
+                        </div>
+                    </div>
+                </div>
+            </a>
+
+            <a href="./wta.html" class="work-card-a">
+                <div class="work-card wta-app">
+                    <div class="work-card-content card-left">
+                        <h3>WTA App Concept</h3>
+                        <p>A first-party transit app concept for wayfinding and trip planning with strong branding.</p>
+                        <div class="work-card-tag-wrapper">
+                            <span class="tag">School Project</span>
+                            <span class="tag">UX Designer</span>
+                        </div>
+                    </div>
+                </div>
+            </a>
+
+
+            <a href="" class="work-card-a">
+                <div class="work-card airbnb-eco">
+                    <div class="work-card-content">
+                        <h3>Airbnb Eco</h3>
+                        <p>Incentivizing and rewarding sustainable practices for Airbnb guests while empowering local communities.</p>
+                        <div class="work-card-tag-wrapper">
+                            <span class="tag">School Project</span>
+                            <span class="tag">UX Designer</span>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </section>
+
         <footer>
-            <div class="ref-wrapper">
-                <h2>REF.</h2>
-                <p>v3.0.1 - &copy; 2021 Daniel King</p>
-            </div>
 
-            <div class="links-wrapper">
-                <h5>LINKS</h5>
-                <p><a href="">Behance</a></p>
-                <p><a href="">LinkedIn</a></p>
-                <p><a href="">Github</a></p>
-            </div>
+            <h3>Let's build something cool together.</h3>
 
-            <div class="email-wrapper">
-                <h5>EMAIL</h5>
-                <p><a href="">chuan.e.king@gmail.com</a></p>
-            </div>
+            <div class="footer-wrapper">
+                <div class="footer-3-col">
 
-            <div class="work-wrapper">
-                <h5>WORK</h5>
-                <p>I am currently available for small freelance projects! Please don't hesitate to reach out to me.</p>
-                <p>For reference, here's my <a class="footer-underline-link" href="">resume</a> again. Just in case ;)</p>
+                    <div class="socials">
+                        <p class="footer-column-header">Socials</p>
+                        <p class="hvr-underline-from-left"><a href="">LinkedIn</a>
+                        <p class="hvr-underline-from-left"><a href="">Twitter</a>
+                    </div>
+
+                    <div class="links">
+                        <p class="footer-column-header">Links</p>
+                        <p class="hvr-underline-from-left"><a href="">Behance</a>
+                        <p class="hvr-underline-from-left"><a href="">Dribble</a>
+                        <p class="hvr-underline-from-left"><a href="">Github</a>
+                    </div>
+
+                    <div class="email">
+                        <p class="footer-column-header">Email</p>
+                        <p class="hvr-underline-from-left"><a href="">chuan.e.king@gmail.com</a>
+                    </div>
+                </div>
+
+                <div class="return-to-top">
+                    <p>Return to Top</p>
+                </div>
             </div>
 
 
