--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <div class="card-wrapper" href="">
                     <div data-aos="reveal" class="hider"></div>
-                    <a data-aos="" href="" class="card">
+                    <a data-aos="" href="" class="card airbnb-card">
                         <div class="blurb">
                             <h2>Airbnb Eco</h2>
                             <p>Airbnb Eco helps guests prioritize sustainable travel and rewards environmentally friendly practices while empowering local communities.</p>
@@ -36,18 +36,29 @@
 
                 <div class="card-wrapper" href="">
                     <div data-aos="reveal" class="hider"></div>
-                    <a data-aos="" href="" class="card">
+                    <a data-aos="" href="" class="card wta-card">
                         <div class="blurb">
-                            <h2>Airbnb Eco</h2>
-                            <p>Airbnb Eco helps guests prioritize sustainable travel and rewards environmentally friendly practices while empowering local communities.</p>
+                            <h2>WTA App Concept</h2>
+                            <p>Designed a first-party mobile app for finding route information and trip planning with strong WTA branding.</p>
                         </div>
-                        <div class="img airbnb-img">
+                        <div class="img wta-img">
                         </div>
                     </a>
                 </div>
 
-            </section>
-        </div>
+                <div class="card-wrapper" href="">
+                            <div data-aos="reveal" class="hider"></div>
+                            <a data-aos="" href="" class="card mental-card">
+                                <div class="blurb">
+                                    <h2>Mental Reminder</h2>
+                                    <p>A minimal, mental-health based reminder app with a focus on usability.</p>
+                                </div>
+                                <div class="img mental-img">
+                                </div>
+                            </a>
+                        </div>
+                    </section>
+                </div>
 
 
     </body>
